--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "ISC",
   "description": "InvestLearn - Micro-Investment Learning Platform Backend",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
